# wordhunt-icebreaker

./: .dockerignore  .gitignore  Dockerfile  README.md  WORDLIST.txt  fly.toml  justfile  pyproject.toml
.github/workflows/: code-quality.yml
app/: config.py  main.py  utils.py
app/api/v1/: __init__.py  board.py
app/dependency/: __init__.py  service.py
app/dto/: api.py  board.py
app/service/: __init__.py  board_service.py
frontend/: index.html  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/api/: board.ts  dictionary.ts
frontend/src/components/: Board.css  Board.tsx  Cell.tsx  DailyScoreCounter.css  DailyScoreCounter.tsx  DictionaryProvider.tsx  DictionaryStatus.tsx  ErrorPopup.css  ErrorPopup.tsx  GameResults.css  GameResults.tsx  InfoModal.css  InfoModal.tsx  Loading.css  Loading.tsx  PixelExplosion.css  PixelExplosion.tsx  ScorePopup.css  ScorePopup.tsx  ScoringBreakdown.css  ScoringBreakdown.tsx  SelectionPath.tsx  StartupPopup.css  StartupPopup.tsx  Timer.css  Timer.tsx
frontend/src/hooks/: useBoard.ts  useDictionary.ts  useTileSelection.ts
frontend/src/lib/: TrieNode.ts  queryClient.ts
frontend/src/utils/: dailyTracking.ts  scoring.ts
frontend/tests/: alwaysTrue.test.tsx  test-setup.ts
tests/dto/: test_board.py
tests/service/: test_board_service.py
