[project]
name = "wordhunt-icebreaker"
version = "0.1.0"
description = "Daily puzzle game based on GamePigeon's WordHunt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[all]>=0.116.1",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.12",
]

[tool.ruff.lint]
extend-select = [
    "A",      # flake8-builtins
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "COM818", # trailing comma on bare tuples
    "E",      # pycodestyle error
    "ERA",    # eradicate
    "FAST",   # fastapi
    "I",      # isort
    "N",      # pep8-naming
    "PT",     # flake8-pytest-style
    "PTH",    # use pathlib
    "RET",    # flake8-return
    "RUF",    # ruff-specific rules
    "TRY004", # typeerror for type exceptions
    "UP",     # pyupgrade
    "W",      # pycodestyle warning
]
preview = true

[tool.ruff.lint.per-file-ignores]
"*" = ["ANN401"]
"tests/*" = ["ANN201"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
